--- a/css/styles.css
+++ b/css/styles.css
@@ -7,12 +7,50 @@
   --secondary-background-color: #2f303a;
   --contrast-elements-color: #f5f4fa;
 }
+ul {
+  margin: 0 auto;
+  padding: 0;
+  list-style: none;
+}
+p,
+h1,
+h2,
+h3 {
+  margin: 0 auto;
+}
 
 body {
   font-family: "Roboto", sans-serif;
   color: var(--primary-text-color);
 }
-
+.container {
+  width: 1200px;
+  margin: 0 auto;
+}
+.section {
+  padding-top: 94px;
+  padding-bottom: 94px;
+}
+.header-nav-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  border-bottom: 1px solid #ececec;
+}
+.nav-bar {
+  display: flex;
+}
+.hero-section {
+  background-color: var(--secondary-background-color);
+  padding-top: 200px;
+  padding-bottom: 200px;
+}
+.hero-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 30px;
+}
 .hero-header {
   color: var(--main-design-white);
   font-weight: 900;
@@ -44,12 +82,7 @@ body {
 .second-logo span:nth-child(2) {
   color: var(--main-design-white);
 }
-.list {
-  list-style: none;
-}
-.site-nav-links {
-  border-bottom: 1px solid #ececec;
-}
+
 .logo {
   text-decoration: none;
 }
@@ -62,8 +95,8 @@ body {
   color: var(--primary-text-color);
 }
 
-.hero-container,
 .footer-container {
+  display: flex;
   background-color: var(--secondary-background-color);
 }
 .button-box {
@@ -75,6 +108,12 @@ body {
   font-size: 16px;
   line-height: 160%;
   letter-spacing: 0.06em;
+  border: none;
+  border-radius: 4px;
+}
+.article-box {
+  display: flex;
+  gap: 30px;
 }
 .article-name {
   font-weight: 700;
@@ -82,6 +121,7 @@ body {
   line-height: 100%;
   letter-spacing: 0.03em;
   text-transform: uppercase;
+  margin-bottom: 10px;
 }
 .article-overview {
   color: var(--secondary-text-color);
@@ -93,12 +133,37 @@ body {
   font-size: 36px;
   line-height: 100%;
   letter-spacing: 0.03em;
+  margin: 0 auto;
 }
-.about-container {
+
+.information-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  outline: 1px solid green;
+  gap: 50px;
+  margin-top: 94px;
+}
+.team-section {
   background-color: var(--contrast-elements-color);
 }
+.team-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  outline: 1px solid green;
+  gap: 50px;
+}
+.team-items {
+  display: flex;
+  justify-content: center;
+  gap: 30px;
+  outline: 1px solid red;
+}
 .photo-box {
+  height: 368px;
   background-color: var(--main-design-white);
+  box-shadow: #000;
 }
 .name {
   font-weight: 500;
@@ -106,6 +171,8 @@ body {
   line-height: 100%;
   text-align: center;
   letter-spacing: 0.03em;
+  margin-top: 30px;
+  margin-bottom: 10px;
 }
 .position {
   color: var(--secondary-text-color);
@@ -113,6 +180,13 @@ body {
   line-height: 100%;
   text-align: center;
   letter-spacing: 0.03em;
+  margin-bottom: 30px;
+}
+.filter {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 50px;
+  gap: 10px;
 }
 .filter-button {
   font-weight: 500;
@@ -123,11 +197,20 @@ body {
   background-color: var(--contrast-elements-color);
   border: none;
   cursor: pointer;
+  padding: 6px 22px;
+  border-radius: 4px;
 }
 .filter-button:focus,
 .filter-button:hover {
   background: var(--main-design-blue);
   color: var(--main-design-white);
+}
+.portfolio {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  gap: 30px;
+  outline: 1px solid red;
 }
 
 .portfolio-element {
