--- a/css/styles.css
+++ b/css/styles.css
@@ -30,15 +30,64 @@ body {
 .section {
   padding-top: 94px;
   padding-bottom: 94px;
+  margin: 0 auto;
 }
-.header-nav-container {
+.first-logo,
+.second-logo {
+  font-family: "Raleway";
+  font-weight: 700;
+  font-size: 26px;
+  line-height: 100%;
+  letter-spacing: 0.03em;
+  color: var(--main-design-blue);
+}
+
+.first-logo,
+.second-logo {
+  color: var(--main-design-blue);
+}
+.logo {
+  text-decoration: none;
+  padding-top: 24px;
+  padding-bottom: 25px;
+}
+
+.first-logo span {
+  color: var(--main-design-black);
+}
+
+.second-logo span {
+  color: var(--main-design-white);
+}
+
+.nav-link {
+  text-decoration: none;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 100%;
+  letter-spacing: 0.02em;
+  color: var(--primary-text-color);
+}
+
+.header-nav {
   display: flex;
   justify-content: space-between;
   align-items: center;
   border-bottom: 1px solid #ececec;
 }
+.nav-links {
+  display: flex;
+  justify-content: space-between;
+}
 .nav-bar {
   display: flex;
+  align-items: center;
+  gap: 46px;
+  margin-left: 93px;
+}
+.header-contact {
+  display: flex;
+  gap: 50px;
 }
 .hero-section {
   background-color: var(--secondary-background-color);
@@ -53,51 +102,13 @@ body {
 }
 .hero-header {
   color: var(--main-design-white);
+  max-width: 696px;
   font-weight: 900;
   font-size: 44px;
   line-height: 116%;
   letter-spacing: 0.06em;
   text-align: center;
   text-transform: uppercase;
-}
-
-.first-logo,
-.second-logo {
-  font-family: "Raleway";
-  font-weight: 700;
-  font-size: 26px;
-  line-height: 100%;
-  letter-spacing: 0.03em;
-}
-
-.first-logo span:nth-child(1),
-.second-logo span:nth-child(1) {
-  color: var(--main-design-blue);
-}
-
-.first-logo span:nth-child(2) {
-  color: var(--main-design-black);
-}
-
-.second-logo span:nth-child(2) {
-  color: var(--main-design-white);
-}
-
-.logo {
-  text-decoration: none;
-}
-.nav-link {
-  text-decoration: none;
-  font-weight: 500;
-  font-size: 14px;
-  line-height: 100%;
-  letter-spacing: 0.02em;
-  color: var(--primary-text-color);
-}
-
-.footer-container {
-  display: flex;
-  background-color: var(--secondary-background-color);
 }
 .button-box {
   background-color: var(--main-design-blue);
@@ -109,8 +120,20 @@ body {
   line-height: 160%;
   letter-spacing: 0.06em;
   border: none;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
 }
+
+.footer-container {
+  background-color: var(--secondary-background-color);
+  padding: 60px 0px;
+}
+.footer-items {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+}
+
 .article-box {
   display: flex;
   gap: 30px;
@@ -133,14 +156,12 @@ body {
   font-size: 36px;
   line-height: 100%;
   letter-spacing: 0.03em;
-  margin: 0 auto;
 }
 
 .information-container {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  outline: 1px solid green;
   gap: 50px;
   margin-top: 94px;
 }
@@ -151,19 +172,19 @@ body {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  outline: 1px solid green;
   gap: 50px;
 }
 .team-items {
   display: flex;
   justify-content: center;
   gap: 30px;
-  outline: 1px solid red;
 }
 .photo-box {
   height: 368px;
   background-color: var(--main-design-white);
-  box-shadow: #000;
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 0px 0px 4px 4px;
 }
 .name {
   font-weight: 500;
@@ -210,20 +231,27 @@ body {
   justify-content: center;
   flex-wrap: wrap;
   gap: 30px;
-  outline: 1px solid red;
+  vertical-align: middle;
 }
 
 .portfolio-element {
   width: 370px;
   height: 404px;
-  border: 1px solid #eee;
   text-align: left;
+  vertical-align: middle;
+  margin: 0 auto;
+  border: 1px solid #eee;
+}
+.project-description {
+  margin: 0px;
+  padding: 0px;
 }
 .project-name {
   font-weight: 700;
   font-size: 18px;
   line-height: 200%;
   letter-spacing: 0.06em;
+  margin: 20px 24px 4px;
 }
 
 .project-type {
@@ -231,6 +259,7 @@ body {
   line-height: 188%;
   color: var(--secondary-text-color);
   letter-spacing: 0.03em;
+  margin: 0 24px 20px;
 }
 
 .address-info {
@@ -239,17 +268,22 @@ body {
   font-style: normal;
   letter-spacing: 0.03em;
 }
-.email,
-.phone {
+.footer-contact {
+  display: flex;
+  flex-direction: column;
+  text-align: left;
+  margin: 0;
+  gap: 9px;
+}
+
+.contact-item {
   font-style: normal;
   text-decoration: none;
   color: var(--secondary-text-color);
   letter-spacing: 0.03em;
 }
-.email:hover,
-.phone:hover,
-.email:focus,
-.email:hover,
+.contact-item:hover,
+.contact-item:focus,
 .nav-link:hover,
 .nav-link:focus {
   color: var(--main-design-blue);
