--- a/css/styles.css
+++ b/css/styles.css
@@ -155,7 +155,7 @@ body {
   flex-direction: column;
   justify-content: space-between;
   gap: 50px;
-  margin-top: 94px;
+  margin-bottom: 94px;
 }
 .team-section {
   background-color: var(--contrast-elements-color);
